--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@
       <footer>
         <p>
           This project was coded by
-          <a href="#" target="_blank">Your name</a> and is
-          <a href="#" target="_blank"> on GitHub</a> and
-          <a href="#" target="_blank">hosted on Netlify</a>
+          <a href="https://github.com/acajica87" target="_blank">Ana Cajica</a>
+          and is
+          <a href="https://github.com/acajica87/Ops-Challenge-" target="_blank">
+            on GitHub</a
+          >
+          and
+          <a href="https://beamish-kitsune-993bf6.netlify.app/" target="_blank"
+            >hosted on Netlify</a
+          >
         </p>
       </footer>
     </div>
